objects/LLC_BI__Product_Package__c.object
<CustomObject>
    <description>The Product Package Object allows the user to group relationships and loans in a singular view to work complex credit packages and exposure purposes</description>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in flex approval process to reference the first approver. Added for Commercial Accelerate project.</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Product_Package_1st_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in flex approval process to reference the second approver. Added for Commercial Accelerate project.</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commercial_Product_Packages_2nd_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account field is a lookup to the Account/ Relationship object in nCino and used to specify the main account the product package is associated with. The relationship is required to create a new loan facility from the product package page.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_Income_Category__c</fullName>
        <description>Users populate this picklist field with any additional income in the deal an FI originates outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Populate this field with any additional income.</inlineHelpText>
        <label>Additional Income Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Additional_One_Time_Income__c</fullName>
        <description>Users populate this input with any additional one-time wealth, insurance, or other relevant income in the deal not captured in other loan, deposit, or treasury inputs. By default, it is blank.</description>
        <inlineHelpText>Use this field to capture any additional one-time wealth, insurance, or other relevant income in the deal an FI originates outside of nCino and not captured in existing loan, deposit, or treasury inputs.</inlineHelpText>
        <label>Additional One Time Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ancillary_Product_Tax_Rate__c</fullName>
        <description>The approximate tax rate to apply to the revenue of new deposits in the deal an FI originates outside of nCino. By default, it is 21.</description>
        <inlineHelpText>The approximate tax rate to apply to the revenue of new deposits in the deal an FI originates outside of nCino.</inlineHelpText>
        <label>Deposit Tax Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ancillary_Revenue_Comments__c</fullName>
        <description>Users populate this text field with any details associated with ancillary revenue summarized in the deal. By default, it is blank.</description>
        <inlineHelpText>Use this field for any details associated with the ancillary revenue being summarized in the deal but originated outside of nCino.</inlineHelpText>
        <label>Ancillary Revenue Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Deposit_Operating_Cost__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Use this field to determine the approximate Annual Operating Cost for new deposit products an FI originates in the deal outside of nCino. By default, it is 200.</description>
        <inlineHelpText>The approximate Annual Operating Cost for new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Annual Deposit Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Status__c</fullName>
        <description>The approval status field is used to specify where the Product Package is in an approval process. This field is used in conjunction with reverse propagation functionality to alert the user when all loans have met their approvals and the product package is ready to move forward in its approval path. This field should not be used when the propagate down approval process functionality is implemented.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Affiliated Exposure to this Product Package.</description>
        <label>Booked Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Booked Direct Exposure to the Product Package.</inlineHelpText>
        <label>Booked Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Booked Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Booked Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capital_Allocation_Rate_of_New_Exposures__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Users populate this field with the approximate capital allocation rate for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same capital allocation rate used in loans. By default, it is 5%.</description>
        <inlineHelpText>The approximate capital allocation rate for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same capital allocation rate used in loans.</inlineHelpText>
        <label>Capital Allocation Rate of New Exposures</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Committed Affiliated Exposure to this Product Package.</description>
        <label>Committed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Committed Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Committed Direct Exposure to the Product Package.</inlineHelpText>
        <label>Committed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Committed Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Committed Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Committed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Of_New_Deposit_Capital_Percent__c</fullName>
        <defaultValue>0.1</defaultValue>
        <description>Use this field to represent the cost of deposit capital for new deposits in the deal an FI originates outside of nCino. By default, it is 10.</description>
        <inlineHelpText>The cost of deposit capital for new deposits in the deal an FI originates outside of nCino.</inlineHelpText>
        <label>Cost of New Deposit Capital</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_of_Capital_of_New_Exposures__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>Users populate this field with the approximate cost of capital for all new treasury exposure an FI originates in the deal outside of nCino. nCino recommends using the same cost of capital rate used in for loans. By default, it is 10%.</description>
        <inlineHelpText>The approximate cost of capital percentage for all new treasury exposure being originated in the deal outside of nCino. nCino recommends using the same cost of capital rate used in for loans.</inlineHelpText>
        <label>Cost of Capital of New Exposures</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Credit Memo field is a look up to the credit memo record associated to the Product Package. This will automatically populate when a credit memo is generated for the Product Package. This will link the user from the Product Package directly to the credit memo associated with it.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deal_Type__c</fullName>
        <description>Users select a deal type from this optional picklist. This determines behaviours and layouts for the record. By default it is blank.</description>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Onboarding</fullName>
                </value>
                <value>
                    <fullName>Handover Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;pp-details.dashboard-pp-sn-details&apos;</defaultValue>
        <description>This field is used to determine the default landing page for this product package within the nCino User Interface.</description>
        <inlineHelpText>This field is used to determine the default landing page for this product package within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Reserve_Rate__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Use this field to determine the approximate reserve rate for new deposit balances in the deal an FI holds on the balance sheet. By default, it is 5.</description>
        <inlineHelpText>The approximate reserve rate for deposit balances to be held on the balance sheet.</inlineHelpText>
        <label>Deposit Reserve Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The Description field is an optional, free form, long text area that can be used to input details or additional information about the Product Package.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Loss_Rate_of_New_Exposures__c</fullName>
        <defaultValue>0.02</defaultValue>
        <description>Users populate this field with the approximate expected loss rate for any new treasury exposures an FI originates in the deal outside of nCino. Represents an average blended rate of PD &amp; LGD. By default, it is 2%.</description>
        <inlineHelpText>The approximate expected loss rate for any new treasury exposures an FI originates in the deal outside of nCino. This value should represent an average blended rate of PD &amp; LGD.</inlineHelpText>
        <label>Expected Loss Rate of New Exposures</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Term_of_New_Deposit_Products__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Use this field for the expected term in months for new deposit products an FI originates in the deal outside of nCino. By default, it is 12.</description>
        <inlineHelpText>The expected term in months for new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Expected Term of New Deposit Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Term_of_New_Treasury_Services__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Users populate this field with the expected term in months for new treasury products an FI originates in the deal outside of nCino. By default, it is 60.</description>
        <inlineHelpText>The expected or average term in months for new treasury service products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Expected Term of New Treasury Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Utilization_of_New_Exposure__c</fullName>
        <defaultValue>0.30</defaultValue>
        <description>Users populate this optional field with the expected utilization percentage of new credit exposure for applicable treasury service products an FI originates outside of nCino. By default, it is  30%.</description>
        <inlineHelpText>Users populate this field with the expected utilization % of new credit exposure for applicable treasury service products an FI originates outside of nCino.</inlineHelpText>
        <label>Expected Utilization of New Exposure</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Handover_Information__c</fullName>
        <description>Users populate this optional rich text field with context and other supporting information about the client and their financial situation. By default it is blank.</description>
        <inlineHelpText>Provide context and other supporting information about the client and their financial situation.</inlineHelpText>
        <label>Handover Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Handover_Type__c</fullName>
        <description>Users select the type of a Handover Loan from this optional picklist. By default it is blank.</description>
        <label>Handover Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distressed Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Leases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is an automatic flag to denote whether any of the underlying facilities are lease products.</description>
        <label>Has Leases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Syndicated_Loans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional field is an automatic flag to denote whether any of the underlying facilities have been marked as &quot;Is Syndication&quot; loans.</description>
        <label>Has Syndicated Loans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Exposure_Calc_Date__c</fullName>
        <description>This date/time field automatically populates via the system. This field specifies the most recent date and time for a given exposure calculation. Default is null.</description>
        <label>Last Exposure Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Review_Date__c</fullName>
        <description>This field is an optional date field. Only used if the customer will be initiating Reviews from the Product Package level. This field is used to show the date of the last review completed on the Product Package and its loans and relationships associated to those loans.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Facilities_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated and used to store the number of top level loan facilities in the product package. The count of loan facilities will NOT include those loans that have been superseded, declined or withdrawn.</description>
        <label>Number of Loan Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Deposit_Blended_Rate__c</fullName>
        <description>The system populates this field to determine the approximate blended rate of new interest-bearing products an FI originates in the deal outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Use this field to determine the approximate blended rate of new interest-bearing products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>New Deposit Product Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Deposit_Revenue_Rate__c</fullName>
        <defaultValue>0.02</defaultValue>
        <description>Use this field to determine the approximate deposit revenue rate for new deposit balances in the deal an FI originates outside of nCino. This value reflects a FTP or cost of funds that is confirmed with the FI. By default, it is 2.</description>
        <inlineHelpText>The approximate reserve rate for deposit balances to be held on the balance sheet. This value reflects a FTP or cost of funds that is confirmed with the FI.</inlineHelpText>
        <label>New Deposit Revenue Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Interest_Bearing_Deposit_Balance__c</fullName>
        <description>Users populate this field with the sum of any additional interest-bearing deposit account balances for all new deposit products an FI originates in the deal outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Use this field to indicate any additional interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>New Interest Bearing Deposit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Money__c</fullName>
        <description>This field is an optional currency field.  This is a manually entered field that is used to track the amount of new money being introduced to the Product Package.</description>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Monthly_Treasury_Income__c</fullName>
        <description>Users populate this optional field to indicate the new monthly income of all treasury products an FI originates outside of nCino net of any ECR allowance. By default, it is blank.</description>
        <inlineHelpText>The additional monthly income of all treasury products (net of ECR) in the deal that an FI originates outside of nCino.</inlineHelpText>
        <label>New Monthly Treasury Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Non_Interest_Bearing_Deposit_Balance__c</fullName>
        <description>Users populate this field to indicate any additional interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</description>
        <inlineHelpText>Use this field to indicate any additional non-interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>New Non-Interest Bearing Deposit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Treasury_Credit_Exposure__c</fullName>
        <description>Users populate this optional field with the sum of any new credit exposure for applicable treasury service products an FI originates outside of nCino. By default, it is blank.</description>
        <inlineHelpText>This field indicates the sum of total credit exposure for any new treasury service products in the deal an FI originates outside of nCino.</inlineHelpText>
        <label>New Treasury Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Treasury_One_Time_Fee_Amount__c</fullName>
        <description>Users populate this optional field with the sum of any one-time fee amounts for treasury products being originated outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Populate this field with the sum of any one-time fees associated with treasury products an FI originates in the deal outside of nCino. Exclusive of recurring fees captured in New Monthly Treasury Income.</inlineHelpText>
        <label>New Treasury One Time Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Annual_Review__c</fullName>
        <description>--DEPRECATED-- This field will be deprecated, as its functionality is now handled by the more generic &quot;next review date&quot; field.</description>
        <label>-D Next Annual Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Review_Date__c</fullName>
        <description>This field is an optional date field. Only used if the customer will be initiating Reviews from the product package level. This date field is used to specify the date of the next review for the Product Package. This date will automatically populate, based off of review frequency, once the initial review date is set manually, and a review has been completed (to populate the last review date field) .</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Outstanding__c</fullName>
        <description>This currency field is an option and manually entered field. It is used to show the amount of money&quot; in use&quot;  for the Product Package. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this optional lookup field to indicate the primary borrower of loans. When populated, the system uses this field to create a specific entity involvement record when users create a loan in Deal Proposal.</description>
        <label>Primary Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Primary Product Packages</relationshipLabel>
        <relationshipName>Primary_Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the primary officer for the Product Package</description>
        <label>Primary Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Propagate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to execute the ActionPropagation trigger. This trigger is used to propagate approval actions to loans that are associated to the product package.</description>
        <label>Propagate Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Affiliated Exposure to this Product Package.</description>
        <label>Proposed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Proposed Direct Exposure to the Product Package.</inlineHelpText>
        <label>Proposed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Proposed Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Proposed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RWA_Percentage_for_New_Treasury_Exposure__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Users populate this field with the approximate Risk Weighted Assets percentage for any new treasury exposures an FI originates in the deal outside of nCino. Percentage varies based on the mix of treasury products. By default, it is 100%.</description>
        <inlineHelpText>Risk Weighted Assets percentage for any new treasury exposures an FI originates in the deal outside of nCino. The percentage could vary based on the mix of treasury products.</inlineHelpText>
        <label>RWA Percentage for New Treasury Exposure</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reason_For_Handover__c</fullName>
        <description>Users select the reason for loan hand over from this optional picklist. By default it is blank.</description>
        <label>Reason for Handover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Covenant Breach</fullName>
                </value>
                <value>
                    <fullName>Declining Industry Sector</fullName>
                </value>
                <value>
                    <fullName>Financial Distress</fullName>
                </value>
                <value>
                    <fullName>Management Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Frequency__c</fullName>
        <description>This field is an optional and manually set field. It is only used if the customer will be initiating Reviews from the product package level. This field is used to indicate how often the product package review is required.</description>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reviewable_Loan_Facilities_Count__c</fullName>
        <description>This field is automatically populated based on the loans that have the &quot;is Review Ready&quot; checkbox, checked on the loan wall.  This field is used to show the number of main loan facilities ready to review. And can be utilized for entry criteria for the approval processes to ensure only loans ready to be submitted for approval are.</description>
        <label>Number of Reviewable Loan Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating__c</fullName>
        <description>This field is an optional and manually entered field. This picklist is used to specify the risk rating for the Product Package.</description>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Secondary_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the secondary officer for the Product Package</description>
        <label>Secondary Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>